# tuneforge

./: .env.miner.example  .env.validator.example  .gitignore  DOCS_PROMPT.md  Dockerfile.miner  Dockerfile.validator  LICENSE  README.md  alembic.ini  docker-compose.yml  ecosystem.config.js  min_compute.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260303_0001_a1b2c3d4e5f6_initial_schema.py  20260304_0002_b2c3d4e5f6g7_audio_to_postgres.py  20260304_0003_c3d4e5f6g7h8_add_validator_hotkey.py  20260304_0004_d4e5f6g7h8i9_fix_challenge_uniqueness.py  20260304_0005_e5f6g7h8i9j0_add_annotation_tables.py  20260304_0006_f6g7h8i9j0k1_add_gold_quality_control.py  20260304_0007_g7h8i9j0k1l2_add_annotation_milestones.py  20260304_0008_h8i9j0k1l2m3_add_annotation_streaks.py
docs/: SAAS_PLATFORM_PLAN.md  api_setup.md  miner_setup.md  setup.md  validator_setup.md
neurons/: miner.py  validator.py
scripts/: download_models.sh  migrate_audio_to_postgres.py  run_miner.sh  run_validator.sh  setup.sh
tests/: conftest.py  mock_subtensor.py  test_active_learner.py  test_annotator_reliability.py  test_api.py  test_artifact_detector.py  test_attribute_verifier.py  test_audio_quality.py  test_chord_coherence.py  test_clap_scorer.py  test_commit_sync.py  test_ema_persistence.py  test_fad_scorer.py  test_harmonic_quality.py  test_integration.py  test_melody_coherence.py  test_miner.py  test_musicality.py  test_neural_codec_quality.py  test_neural_quality.py  test_perceptual_quality.py  test_plagiarism.py  test_preference_model.py  test_preference_pipeline.py  test_production_quality.py  test_protocol.py  test_rewards.py  test_stereo_quality.py  test_structural_completeness.py  test_validator.py  test_vocal_quality.py  test_weight_setter.py
tools/: annotate_preferences.py  build_embedding_cache.py  build_reference_stats.py  calibrate_mert.py  export_and_train.py  import_annotations.py  preference_trainer_daemon.py  train_preference.py
tuneforge/: __init__.py  settings.py  subnet_api.py
tuneforge/api/: __init__.py  auth.py  billing.py  credits.py  database.py  jwt_auth.py  milestones.py  models.py  organic_router.py  rate_limiter.py  redis_manager.py  server.py  sse.py  storage.py  validator_api.py  validator_auth.py
tuneforge/api/database/: __init__.py  crud.py  engine.py  models.py
tuneforge/api/routes/: __init__.py  annotations.py  audio.py  auth.py  browse.py  credits.py  generate.py  health.py  keys.py  validator.py
tuneforge/base/: __init__.py  dendrite.py  miner.py  neuron.py  protocol.py  validator.py
tuneforge/config/: scoring_config.py
tuneforge/core/: miner.py  validator.py
tuneforge/generation/: ace_step_backend.py  audio_utils.py  diffrhythm_backend.py  heartmula_backend.py  lyrics_generator.py  model_manager.py  musicgen_backend.py  prompt_parser.py  stable_audio_backend.py
tuneforge/rewards/: leaderboard.py  reward.py  scoring.py  weight_setter.py
tuneforge/scoring/: active_learner.py  annotator_reliability.py  artifact_detector.py  attribute_verifier.py  audio_quality.py  chord_coherence.py  clap_scorer.py  conditional_targets.py  diversity.py  fad_scorer.py  fingerprint_scorer.py  genre_profiles.py  harmonic_quality.py  learned_mos.py  melody_coherence.py  mix_separation.py  multi_scale.py  musicality.py  neural_codec_quality.py  neural_quality.py  perceptual_quality.py  plagiarism.py  preference_model.py  production_quality.py  progressive_difficulty.py  stereo_quality.py  structural_completeness.py  timbral_naturalness.py  vocal_lyrics.py  vocal_quality.py
tuneforge/services/: wandb_reporter.py
tuneforge/utils/: __init__.py  config.py  logging.py  weight_utils.py
tuneforge/validation/: challenge_manager.py  commit_sync.py  prompt_generator.py
